[project]
name = "reven-plugin-etube"
authors = [
    { name = "Magnust Hektoen Steensland", email = "mag.steensland@gmail.com" },
    { name = "Norbert Arkadiusz Görke", email = "me@ngorke.dev" },
]
license = "Apache-2.0"
description = "Reven plugin for reverse engineering Shimano E-Tube firmware."
readme = { file = "README.md", content-type = "text/markdown" }
keywords = ["reverse engineering"]
dependencies = ["pycryptodome~=3.23", "attrs~=25.3", "typer~=0.16.0"]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/reven-project/reven-plugin-etube.git"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
